Place the zip library under the brimworks namespace.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
   INCLUDE_DIRECTORIES(${LIBZIP_INCLUDE_DIR} ${LUA_INCLUDE_DIR})
   ADD_LIBRARY(cmod_zip MODULE lua_zip.c lua_zip.def)
   SET_TARGET_PROPERTIES(cmod_zip PROPERTIES PREFIX "")
+  SET_TARGET_PROPERTIES(cmod_zip PROPERTIES LIBRARY_OUTPUT_DIRECTORY brimworks)
   SET_TARGET_PROPERTIES(cmod_zip PROPERTIES OUTPUT_NAME zip)
   TARGET_LINK_LIBRARIES(cmod_zip ${LUA_LIBRARIES} ${LIBZIP_LIBRARY})  
 # / build zip.so
@@ -37,9 +38,9 @@ CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
 # Define how to test zip.so:
   INCLUDE(CTest)
   FIND_PROGRAM(LUA NAMES lua lua.bat)
-  ADD_TEST(basic ${LUA} ${CMAKE_CURRENT_SOURCE_DIR}/test.lua ${CMAKE_CURRENT_BINARY_DIR}/)
+  ADD_TEST(basic ${LUA} ${CMAKE_CURRENT_SOURCE_DIR}/test.lua ${CMAKE_CURRENT_BINARY_DIR})
 # / test zip.so
 
 # Where to install stuff
-  INSTALL (TARGETS cmod_zip DESTINATION ${INSTALL_CMOD})
+  INSTALL (TARGETS cmod_zip DESTINATION ${INSTALL_CMOD}/brimworks)
 # / Where to install.
